--- a/stylesheet.css
+++ b/stylesheet.css
@@ -112,8 +112,8 @@ body {
   }
   
   .lesson-wrapper {
-    height: 500px;
-    padding-bottom: 80px;
+    paddingpadding-top:100%
+    paddingpadding-bottom: 80px;
     background-color: #f7f7f7;
     text-align: center;
   }
