--- a/stylesheet.css
+++ b/stylesheet.css
@@ -113,7 +113,7 @@ body {
   
   .lesson-wrapper {
     paddingpadding-top:100%
-    paddingpadding-bottom: 80px;
+    padding-bottom: 80px;
     background-color: #f7f7f7;
     text-align: center;
   }
